k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daniel-town 
spec:
  selector:
    app: daniel-town
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
